--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .nav > img {
@@ -12,7 +12,7 @@
 .nav > ul {
   display: flex;
   list-style-type: none;
-  gap: 50px;
+  gap: 1rem;
   padding: 0;
   margin: 0;
 }
@@ -40,5 +40,5 @@
   border: none;
   background-color: #10162B;
   color: #fff;
-  font-weight: bold;
+  font-weight: 600;
 }
