--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -32,7 +32,7 @@
   color: #3045A8;
 }
 
-.nav > ul > li > a:hover {}
+/* .nav > ul > li > a:hover {} */
 
 .nav > ul > li > button {
   font-family: 'Montserrat', sans-serif;
