--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .app {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+  color: #10162B;
+  font-family: "Spoof", sans-serif;
 }
