--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,68 +1,83 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+}
+
 .hero {
   display: flex;
   gap: 50px;
-  margin: 7rem 0;
 }
 
 .hero > .text-box {
-  color: #10162B;
   line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .hero > .text-box > small {
   color: #FBBF19;
   font-size: 0.5rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .hero > .text-box > h1 {
-  margin: 1rem 0;
-  padding: 0;
   font-size: 2.5rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .hero > .text-box > p {
-  margin: 1rem 0;
-  padding: 0;
-  font-size: 1.5rem;
+  font-size: 1.35rem;
   font-weight: 300;
 }
 
-.hero > .text-box > .cta {
+.hero > .text-box > a > .cta {
+  width: 15rem;
   background-color: #10162B;
   color: #fff;
-  font-family: "Montserrat", sans-serif;
-  border: none;
+  font-family: "Spoof", sans-serif;
+  border: 2px solid #fffffd;
   padding: 0.75rem 1.5rem;
   border-radius: 10px;
+}
+
+.hero > .text-box > a > .cta:hover {
+  border: 2px solid #10162B;
+  background-color: #fffffd;
+  color: #10162B;
+  transition: 0.5s;
 }
 
 .hero > img {
   border-radius: 10px;
   border: 10px solid #FFF3D1;
-  align-self: stretch;
+  align-self: flex-start;
   width: 550px;
 }
 
 .catch-phrase {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  gap: 1.5rem;
 }
 
 .catch-phrase > .question {
-  color: #10162B;
   font-size: 2rem;
   text-align: center;
-  margin: 0;
+  font-weight: 500;
 }
 
 .catch-phrase > .advice {
   width: 700px;
+  font-weight: 300;
   text-align: center;
   font-size: 1.2rem;
   line-height: 1.5;
-  color: #10162B;
 }
