--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .nav > img {
@@ -26,6 +26,13 @@
   padding: 0.5rem 2rem;
   text-decoration: none;
   color: #10162B;
+  border: 2px solid #fff;
+  border-radius: 10px;
+}
+
+.nav > ul > li > a:hover {
+  border-color: #10162B;
+  transition: 0.5s;
 }
 
 .nav > ul > li > a:active {
@@ -35,12 +42,19 @@
 /* .nav > ul > li > a:hover {} */
 
 .nav > ul > li > button {
-  font-family: 'Montserrat', sans-serif;
+  border: 2px solid #fff;
+  font-family: 'Spoof', sans-serif;
   padding: 1.2rem 2rem;
   cursor: pointer;
   border-radius: 10px;
-  border: none;
   background-color: #10162B;
-  color: #fff;
-  font-weight: 600;
+  color: #fffffd;
+  font-weight: 500;
+}
+
+.nav > ul > li > button:hover {
+  border: 2px solid #10162B;
+  background-color: #fffffd;
+  color: #10162B;
+  transition: 0.5s;
 }
