--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,20 +1,25 @@
 .nav {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-weight: 500;
+  font-weight: 400;
+  padding: 2.5rem 0;
 }
 
-.nav > img {
+.nav > .img-container {
+  width: 10rem;
+  display: flex;
+}
+
+.nav > .img-container > img {
   width: 10rem;
 }
 
 .nav > ul {
   display: flex;
   list-style-type: none;
-  gap: 1rem;
   padding: 0;
   margin: 0;
+  margin-left: auto;
+  gap: 0.5rem;
 }
 
 .nav > ul > li {
@@ -28,33 +33,31 @@
   color: #10162B;
   border: 2px solid #fff;
   border-radius: 10px;
+  transition: 0.5s;
 }
 
 .nav > ul > li > a:hover {
   border-color: #10162B;
-  transition: 0.5s;
 }
 
 .nav > ul > li > a:active {
   color: #3045A8;
 }
 
-/* .nav > ul > li > a:hover {} */
-
 .nav > ul > li > button {
-  border: 2px solid #fff;
+  border: 2px solid #10162B;
   font-family: 'Spoof', sans-serif;
-  padding: 1.2rem 2rem;
+  padding: 0.55rem 2rem;
   cursor: pointer;
   border-radius: 10px;
   background-color: #10162B;
   color: #fffffd;
   font-weight: 500;
+  transition: 0.5s;
 }
 
 .nav > ul > li > button:hover {
   border: 2px solid #10162B;
   background-color: #fffffd;
   color: #10162B;
-  transition: 0.5s;
 }
