--- a/src/components/card/CardImageBox.css
+++ b/src/components/card/CardImageBox.css
@@ -2,13 +2,20 @@
   border: 5px solid #DFEFFF;
   border-radius: 10px;
   width: 500px;
+  display: flex;
 }
 
 .card-image-box > img {
+  align-self: center;
   position: relative;
   top: 2rem;
   left: 2rem;
-  width: 500px;
-  border-radius: 10px;
+  width: 100%;
+  border-radius: 5px;
+  transition: 0.5s;
 }
 
+.card-image-box > img:hover {
+  top: 0;
+  left: 0;
+}
