--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,20 +1,33 @@
 * {
   margin: 0;
   padding: 0;
+  color: #10162B;
 }
 
 .hero {
   display: flex;
   gap: 5rem;
   align-content: center;
+  font-family: "Spoof", sans-serif;
   max-width: fit-content;
+  padding: 2.5rem 5rem;
   margin: 0 auto;
+}
+
+.form-hero {
+  font-family: "Spoof", sans-serif;
 }
 
 .hero > .text-box {
   line-height: 1.5;
   display: flex;
   flex-direction: column;
+}
+
+.form-hero > .form-text-box {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
 }
 
 .hero > .text-box > small {
@@ -30,6 +43,15 @@
   margin-bottom: 0.5rem;
 }
 
+.form-hero > .form-text-box > h1 {
+  width: 48rem;
+  color: #fffffd;
+  text-align: center;
+  margin: 0 auto;
+  font-weight: 500;
+  font-size: 3.5rem;
+}
+
 .hero > .text-box > p {
   font-size: 1.5rem;
   font-weight: 300;
@@ -37,7 +59,32 @@
   margin-bottom: 1rem;
 }
 
-.hero > .text-box > a > .cta {
+.form-hero > .form-text-box > p {
+  width: 40rem;
+  color: #fffffd;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 2.5rem;
+  font-weight: 300;
+}
+
+.form-hero > .form-text-box > a {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.form-hero > .form-text-box > a > .cta {
+  background-color: #10162B;
+  border: none;
+  width: 3rem;
+  transition: 0.5s;
+}
+
+.form-hero > .form-text-box > a > .cta:hover {
+  width: 5rem;
+}
+
+.hero > .text-box .cta {
   width: 17.4375rem;
   background-color: #10162B;
   color: #fff;
@@ -48,8 +95,7 @@
   transition: 0.5s;
 }
 
-.hero > .text-box > a > .cta:hover {
-  border: 2px solid #10162B;
+.hero > .text-box .cta:hover {
   background-color: #fffffd;
   color: #10162B;
 }
@@ -58,7 +104,7 @@
   margin-left: auto;
   border: 5px solid #FFF3D1;
   display: flex;
-  align-self: flex-start;
+  align-self: flex-end;
   border-radius: 10px;
   transition: border 0.5s;
 }
