--- a/src/components/CatchPhrase.css
+++ b/src/components/CatchPhrase.css
@@ -1,9 +1,10 @@
 .catch-phrase {
+  font-family: "Spoof", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1.5rem;
-  padding: 5rem 0;
+  padding: 10rem 0;
 }
 
 .catch-phrase > .question {
