--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,19 +1,26 @@
-.nav {
+.nav,
+.form-nav {
   display: flex;
   font-weight: 400;
-  padding: 2.5rem 0;
+  font-family: "Spoof", sans-serif;
+  max-width: 1800px;
+  padding: 2.5rem 5rem;
+  margin: 0 auto;
 }
 
-.nav > .img-container {
+.nav > .img-container,
+.form-nav > .form-img-container {
   width: 10rem;
   display: flex;
 }
 
-.nav > .img-container > img {
+.nav > .img-container > a > img,
+.form-nav > .form-img-container > a > img {
   width: 10rem;
 }
 
-.nav > ul {
+.nav > ul,
+.form-nav > ul {
   display: flex;
   list-style-type: none;
   padding: 0;
@@ -22,11 +29,13 @@
   gap: 0.5rem;
 }
 
-.nav > ul > li {
+.nav > ul > li,
+.form-nav > ul > li {
   align-self: center;
 }
 
-.nav > ul > li > a {
+.nav > ul > li > a,
+.form-nav > ul > li > a {
   display: inline-block;
   padding: 0.5rem 2rem;
   text-decoration: none;
@@ -36,15 +45,32 @@
   transition: 0.5s;
 }
 
+.form-nav > ul > li > a {
+  border: 2px solid #10162B;
+  color: #fffffd;
+}
+
 .nav > ul > li > a:hover {
   border-color: #10162B;
+}
+
+.form-nav > ul > li > a:hover {
+  border-color: #fffffd;
 }
 
 .nav > ul > li > a:active {
   color: #3045A8;
 }
 
-.nav > ul > li > button {
+.nav > ul > li > a.button-link {
+  padding: 0;
+}
+
+.nav > ul > li > a.button-link:hover {
+  border: 2px solid #fff;
+}
+
+.nav > ul > li > a > button {
   border: 2px solid #10162B;
   font-family: 'Spoof', sans-serif;
   padding: 0.55rem 2rem;
@@ -56,7 +82,7 @@
   transition: 0.5s;
 }
 
-.nav > ul > li > button:hover {
+.nav > ul > li > a > button:hover {
   border: 2px solid #10162B;
   background-color: #fffffd;
   color: #10162B;
