--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 10rem;
+  padding: 0 0 10rem;
+  font-family: "Spoof", sans-serif;
 }
 
 .card-container > .card {
