--- a/src/Form.css
+++ b/src/Form.css
@@ -13,8 +13,87 @@
 .form {
   font-weight: 400;
   font-family: "Spoof", sans-serif;
-  max-width: 1800px;
+  max-width: 1000px;
   padding: 2.5rem 5rem;
-  margin: 0 auto;
+  margin: 10rem auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #f9f9f9;
+  border-radius: 10px;
 }
 
+.form > h2 {
+  text-align: center;
+  padding: 1rem 0;
+}
+
+.form label {
+  display: block;
+  margin-bottom: 0.5rem;
+  margin: 0 0 0.5rem;
+}
+
+.form input,
+.form select,
+.form textarea {
+  display: block;
+  margin-bottom: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  border: 2px solid #e9e9e9;
+  font-family: "Spoof", sans-serif;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.form textarea {
+  height: 7rem;
+  resize: none;
+}
+
+.form label[for="about-self"] {
+  width: 60%;
+  line-height: 1.5;
+}
+
+.form input[type="number"] {
+  appearance: textfield;
+  width: 50%;
+}
+
+.form input[type="file"] {
+  padding: 1rem;
+}
+
+.form input[type="submit"] {
+  background-color: #10162B;
+  color: #fffffd;
+  width: fit-content;
+  padding: 0.5rem 2rem;
+  margin: 0 auto;
+  border: 2px solid #fffffd;
+  transition: 0.5s;
+}
+
+.form input[type="submit"]:hover {
+  background-color: #fffffd;
+  border-color: #10162B;
+  color: #10162B;
+}
+
+.flex-row {
+  display: flex;
+  gap: 1rem;
+}
+
+.flex-row-item {
+  flex-basis: 50%;
+  
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+}
