--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -8,17 +8,17 @@
   justify-content: space-around;
   height: calc(100% - 133.483px);
   align-items: center;
+  padding: 0 0 5rem 0;
 }
 
 .form {
   font-weight: 400;
   font-family: "Spoof", sans-serif;
-  max-width: 1000px;
+  max-width: 800px;
   padding: 2.5rem 5rem;
   margin: 10rem auto;
   display: flex;
   flex-direction: column;
-  width: 100%;
   background-color: #f9f9f9;
   border-radius: 10px;
 }
@@ -26,25 +26,27 @@
 .form > h2 {
   text-align: center;
   padding: 1rem 0;
+  font-size: 1.75rem;
+  font-weight: 500;
 }
 
 .form label {
-  display: block;
+  display: flex;
   margin-bottom: 0.5rem;
   margin: 0 0 0.5rem;
+  font-size: 1.125rem;
 }
 
 .form input,
 .form select,
 .form textarea {
-  display: block;
-  margin-bottom: 1.5rem;
+  display: flex;
+  margin-bottom: 2rem;
   padding: 0.5rem;
   border-radius: 10px;
   border: 2px solid #e9e9e9;
   font-family: "Spoof", sans-serif;
   font-size: 1rem;
-  width: 100%;
 }
 
 .form textarea {
@@ -88,12 +90,12 @@
 }
 
 .flex-row-item {
+  display: flex;
+  flex-direction: column;
   flex-basis: 50%;
-  
 }
 
 .flex-column {
   display: flex;
   flex-direction: column;
-  width: auto;
 }
