--- a/src/pages/components/Footer.css
+++ b/src/pages/components/Footer.css
@@ -8,24 +8,26 @@
   flex-direction: column;
   align-items: center;
   gap: 3rem;
-  padding: 7rem 5rem;
-  max-width: 1800px;
-  margin: 0 auto;
+  /* padding: 7rem 5rem; */
+  padding: 5rem 0;
+  /* max-width: 1800px; */
+  /* margin: 0 auto; */
   font-size: 1rem;
   color: #10162B;
 }
 
 .footer > .footer-nav {
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   width: 100%;
 }
 
 .footer > .footer-nav > ul {
   display: flex;
   justify-content: space-between;
-  gap: 2rem;
-  width: 100%;
+  flex-direction: column;
+  /* gap: 2rem; */
+  /* width: 100%; */
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -33,12 +35,12 @@
 
 .footer > .footer-nav > ul > li > a > img {
   width: 10rem;
-  padding: 0;
+  padding: 0 1rem;
 }
 
 .footer > .footer-nav > ul > li > a {
-  display: inline-block;
-  padding: 0.5rem;
+  display: block;
+  padding: 1rem;
   text-decoration: none;
 }
 
@@ -57,20 +59,23 @@
 }
 
 .footer > .footer-nav > ul > li.address {
-  padding-top: 0.5rem;
+  padding: 0.5rem 1rem;
   font-style: normal;
 }
 
 .footer > .footer-nav > ul > li.address > address {
+  padding-left: 1rem;
   font-style: normal;
   line-height: 1.7;
 }
 
 .footer > .footer-nav-2 {
   display: flex;
+  flex-direction: column;
   list-style-type: none;
-  gap: 2rem;
-  justify-content: center;
+  gap: 1rem;
+  /* justify-content: center; */
+  text-align: center;
 }
 
 .footer > .footer-nav-2 a {
