--- a/src/pages/components/Hero.css
+++ b/src/pages/components/Hero.css
@@ -6,11 +6,13 @@
 
 .hero {
   display: flex;
+  flex-direction: column;
   gap: 5rem;
   align-content: center;
   font-family: "Spoof", sans-serif;
   max-width: fit-content;
-  padding: 2.5rem 5rem;
+  padding: 4rem 1rem;
+  /* padding: 2.5rem 5rem; */
   margin: 0 auto;
 }
 
@@ -39,7 +41,7 @@
 .hero > .text-box > h1 {
   font-size: 2.875rem;
   font-weight: 500;
-  width: 36.125rem;
+  /* width: 36.125rem; */
   margin-bottom: 0.5rem;
 }
 
@@ -55,7 +57,7 @@
 .hero > .text-box > p {
   font-size: 1.5rem;
   font-weight: 300;
-  width: 32.5rem;
+  /* width: 32.5rem; */
   margin-bottom: 1rem;
 }
 
@@ -86,7 +88,8 @@
 }
 
 .hero > .text-box .cta {
-  width: 17.4375rem;
+  /* width: 17.4375rem; */
+  width: fit-content;
   background-color: #10162B;
   color: #fff;
   font-family: "Spoof", sans-serif;
@@ -102,14 +105,19 @@
 }
 
 .hero > .hero-img {
+  display: none;
+}
+
+/*
+.hero > .hero-img {
   margin-left: auto;
   border: 5px solid #FFF3D1;
   display: flex;
   align-self: flex-end;
   border-radius: 10px;
-  transition: border 0.5s;
-}
+  transition: border 0.5s; */
 
+/*
 .hero > .hero-img > img {
   border-radius: 5px;
   width: 100%;
@@ -119,3 +127,4 @@
 .hero > .hero-img:hover {
   border-color: #10162B;
 }
+*/
