--- a/src/pages/components/Navbar.css
+++ b/src/pages/components/Navbar.css
@@ -1,17 +1,23 @@
 .nav,
 .form-nav {
   display: flex;
+  flex-direction: column;
   font-weight: 400;
   font-family: "Spoof", sans-serif;
-  max-width: 1800px;
-  padding: 2.5rem 5rem;
-  margin: 0 auto;
+  justify-content: space-between;
+  padding: 0 0 1rem;
+  /* max-width: 1800px; */
+  /* padding: 2.5rem 5rem; */
+  /* padding: 1rem; */
+  /* margin: 0 auto; */
 }
 
 .nav > .img-container,
 .form-nav > .form-img-container {
-  width: 10rem;
+  width: calc(100% - 1rem);
   display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0 0 1rem;
 }
 
 .nav > .img-container > a > img,
@@ -19,29 +25,54 @@
   width: 10rem;
 }
 
+.hamburger {
+  display: flex;
+  margin-left: auto;
+}
+
+.hamburger > button {
+  border: none;
+  background-color: #fffffd;
+  color: #10162B;
+  width: fit-content;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: 0 1rem;
+}
+
 .nav > ul,
 .form-nav > ul {
+  background-color: #fffffd;
+  position: fixed;
+  border: 1px solid #10162B;
+  width: 70vw;
+  height: 100%;
   display: flex;
+  flex-direction: column;
   list-style-type: none;
-  padding: 0;
+  padding: 1rem;
   margin: 0;
-  margin-left: auto;
-  gap: 0.5rem;
+  /* margin-left: auto; */
+  /* gap: 0.5rem; */
 }
 
 .nav > ul > li,
 .form-nav > ul > li {
-  align-self: center;
+  width: 100%;
+  /* align-self: center; */
 }
 
 .nav > ul > li > a,
 .form-nav > ul > li > a {
-  display: inline-block;
-  padding: 0.5rem 2rem;
+  display: block;
+  padding: 0.5rem 1rem;
+  /* display: inline-block;
+  padding: 0.5rem 2rem; */
   text-decoration: none;
   color: #10162B;
-  border: 2px solid #fff;
-  border-radius: 10px;
+  text-align: center;
+  /* border: 2px solid #fff; */
+  /* border-radius: 10px; */
   transition: 0.5s;
 }
 
@@ -50,9 +81,11 @@
   color: #fffffd;
 }
 
+/* 
 .nav > ul > li > a:hover {
   border-color: #10162B;
 }
+*/
 
 .form-nav > ul > li > a:hover {
   border-color: #fffffd;
@@ -66,10 +99,24 @@
   padding: 0;
 }
 
-.nav > ul > li > a.button-link:hover {
+/* .nav > ul > li > a.button-link:hover {
   border: 2px solid #fff;
+} */
+
+.nav > ul > li > a.button-link > button {
+  border: 2px solid #10162B;
+  font-family: 'Spoof', sans-serif;
+  padding: 0.55rem 2rem;
+  cursor: pointer;
+  width: 100%;
+  /* border-radius: 10px; */
+  background-color: #10162B;
+  color: #fffffd;
+  font-weight: 500;
+  transition: 0.5s;
 }
 
+/* 
 .nav > ul > li > a > button {
   border: 2px solid #10162B;
   font-family: 'Spoof', sans-serif;
@@ -81,9 +128,14 @@
   font-weight: 500;
   transition: 0.5s;
 }
+*/
 
 .nav > ul > li > a > button:hover {
   border: 2px solid #10162B;
   background-color: #fffffd;
   color: #10162B;
+}
+
+@media only screen and (min-width: 768px) {
+  
 }
