--- a/src/pages/components/card/CardTextBox.css
+++ b/src/pages/components/card/CardTextBox.css
@@ -1,9 +1,10 @@
 .card-text-box {
   display: flex;
   flex-direction: column;
-  width: 500px;
-  align-self: center;
+  /* width: 500px; */
+  /* align-self: center; */
   gap: 1.5rem;
+  padding: 1rem 0;
 }
 
 .card-text-box > .heading-container > .heading {
