--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -1,22 +1,10 @@
-.form-header {
-  background-color: #10162B;
-  height: 100vh;
-}
-
-.hero-only {
-  display: flex;
-  justify-content: space-around;
-  height: calc(100% - 133.483px);
-  align-items: center;
-  padding: 0 0 5rem 0;
-}
-
 .form {
   font-weight: 400;
   font-family: "Spoof", sans-serif;
   max-width: 800px;
-  padding: 2.5rem 5rem;
-  margin: 10rem auto;
+  padding: 2rem 1rem;
+  /* padding: 2.5rem 5rem; */
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background-color: #f9f9f9;
@@ -25,7 +13,7 @@
 
 .form > h2 {
   text-align: center;
-  padding: 1rem 0;
+  padding: 2.5rem 0;
   font-size: 1.75rem;
   font-weight: 500;
 }
@@ -55,7 +43,7 @@
 }
 
 .form label[for="about-self"] {
-  width: 60%;
+  /* width: 60%; */
   line-height: 1.5;
 }
 
@@ -76,6 +64,7 @@
   margin: 0 auto;
   border: 2px solid #fffffd;
   transition: 0.5s;
+  cursor: pointer;
 }
 
 .form input[type="submit"]:hover {
@@ -86,16 +75,17 @@
 
 .flex-row {
   display: flex;
-  gap: 1rem;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .flex-row-item {
   display: flex;
-  flex-direction: column;
-  flex-basis: 50%;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
-.flex-column {
+.flex-row-item-item {
   display: flex;
   flex-direction: column;
 }
