--- a/src/pages/components/CatchPhrase.css
+++ b/src/pages/components/CatchPhrase.css
@@ -10,14 +10,37 @@
 
 .catch-phrase > .question {
   font-size: 2.125rem;
-  /* text-align: center; */
   font-weight: 500;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .catch-phrase > .advice {
-  /* width: 700px; */
+  max-width: 700px;
+  text-align: center;
+  margin: 0 auto;
   font-weight: 300;
-  /* text-align: center; */
   font-size: 1.5rem;
   line-height: 1.5;
+}
+
+@media only screen and (min-width: 768px) {
+  .catch-phrase {
+    padding: 8rem 1rem;
+  }
+}
+
+@media only screen and (min-width: 1090px) {
+  .catch-phrase {
+    padding: 10rem 0;
+  }
+  
+  .catch-phrase > .question {
+    text-align: center;
+  }
+  
+  .catch-phrase > .advice {
+    width: 700px;
+    text-align: center;
+  }
 }
