--- a/src/pages/components/Footer.css
+++ b/src/pages/components/Footer.css
@@ -4,30 +4,23 @@
 
 .footer {
   font-family: "Spoof", sans-serif;
+  text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 3rem;
-  /* padding: 7rem 5rem; */
   padding: 5rem 0;
-  /* max-width: 1800px; */
-  /* margin: 0 auto; */
   font-size: 1rem;
   color: #10162B;
 }
 
 .footer > .footer-nav {
   display: flex;
-  /* justify-content: space-evenly; */
-  width: 100%;
 }
 
 .footer > .footer-nav > ul {
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
-  /* gap: 2rem; */
-  /* width: 100%; */
+  width: 100%;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -74,7 +67,6 @@
   flex-direction: column;
   list-style-type: none;
   gap: 1rem;
-  /* justify-content: center; */
   text-align: center;
 }
 
@@ -86,8 +78,46 @@
 
 .footer > .footer-nav-2 .empty {
   border: 2px solid #e5e5e5;
+  width: 10%;
+  margin: 0 auto;
 }
 
 .footer > .footer-nav-2 > li a:hover {
   color: #c3c3c3;
+}
+
+@media only screen and (min-width: 1090px) {
+  .footer {
+    padding: 7rem 5rem;
+    max-width: 1800px;
+    margin: 0 auto;
+  }
+
+  .footer > .footer-nav {
+    justify-content: space-evenly;
+  }
+  
+  .footer > .footer-nav > ul {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  .footer > .footer-nav > ul > li.address {
+    padding: 1rem;
+    text-align: left;
+  }
+
+  .footer > .footer-nav > ul > li.address > address {
+    padding-left: 0;
+  }
+
+  .footer > .footer-nav-2 {
+    flex-direction: row;
+    width: fit-content;
+    margin: 0 auto;
+  }
+
+  .footer > .footer-nav-2 .empty {
+    width: 0;
+  }
 }
