--- a/src/pages/components/Hero.css
+++ b/src/pages/components/Hero.css
@@ -8,19 +8,18 @@
   display: flex;
   flex-direction: column;
   gap: 5rem;
-  align-content: center;
   font-family: "Spoof", sans-serif;
   max-width: fit-content;
   padding: 4rem 1rem;
-  /* padding: 2.5rem 5rem; */
-  margin: 0 auto;
 }
 
 .form-hero {
+  background-color: #10162B;
   font-family: "Spoof", sans-serif;
 }
 
 .hero > .text-box {
+  max-width: 700px;
   line-height: 1.5;
   display: flex;
   flex-direction: column;
@@ -29,6 +28,8 @@
 .form-hero > .form-text-box {
   display: flex;
   flex-direction: column;
+  padding: 4rem 1rem;
+  margin: 0 auto;
   gap: 4rem;
 }
 
@@ -41,15 +42,12 @@
 .hero > .text-box > h1 {
   font-size: 2.875rem;
   font-weight: 500;
-  /* width: 36.125rem; */
   margin-bottom: 0.5rem;
 }
 
 .form-hero > .form-text-box > h1 {
-  width: 48rem;
   color: #fffffd;
   text-align: center;
-  margin: 0 auto;
   font-weight: 500;
   font-size: 3.5rem;
 }
@@ -57,12 +55,10 @@
 .hero > .text-box > p {
   font-size: 1.5rem;
   font-weight: 300;
-  /* width: 32.5rem; */
   margin-bottom: 1rem;
 }
 
 .form-hero > .form-text-box > p {
-  width: 40rem;
   color: #fffffd;
   text-align: center;
   margin: 0 auto;
@@ -84,11 +80,9 @@
 
 .form-hero > .form-text-box > a > .cta:hover {
   width: 5rem;
-  cursor: pointer;
 }
 
 .hero > .text-box .cta {
-  /* width: 17.4375rem; */
   width: fit-content;
   background-color: #10162B;
   color: #fff;
@@ -108,23 +102,42 @@
   display: none;
 }
 
-/*
-.hero > .hero-img {
-  margin-left: auto;
-  border: 5px solid #FFF3D1;
-  display: flex;
-  align-self: flex-end;
-  border-radius: 10px;
-  transition: border 0.5s; */
 
-/*
-.hero > .hero-img > img {
-  border-radius: 5px;
-  width: 100%;
-  align-self: flex-start;
+@media only screen and (min-width: 768px) {
+  .hero {
+    flex-direction: row;
+  }
 }
 
-.hero > .hero-img:hover {
-  border-color: #10162B;
+@media only screen and (min-width: 1090px) {
+  .hero {
+    padding: 4rem 5rem;
+    width: fit-content;
+    max-width: 1800px;
+    margin: 0 auto;
+  }
+
+  .hero > .text-box {
+    width: 50%;
+    max-width: 36.125rem;
+    max-width: 36.125rem;
+  }
+
+  .hero > .hero-img {
+    border: 5px solid #FFF3D1;
+    display: flex;
+    align-self: flex-start;
+    border-radius: 10px;
+    transition: border 0.5s;
+  }
+  
+  .hero > .hero-img > img {
+    border-radius: 5px;
+    width: 100%;
+    align-self: flex-start;
+  }
+  
+  .hero > .hero-img:hover {
+    border-color: #10162B;
+  }
 }
-*/
