--- a/src/pages/components/card/Card.css
+++ b/src/pages/components/card/Card.css
@@ -16,3 +16,25 @@
   gap: 7rem;
   */
 }
+
+@media only screen and (min-width: 768px) {
+  .card-container {
+    /* gap: 10rem; */
+    gap: 2rem;
+    /* padding: 0 0 10rem; */
+    padding: 1rem 2rem 5rem;
+    font-family: "Spoof", sans-serif;
+  }
+  
+  .card-container > .card {
+    flex-direction: row;
+    gap: 3rem;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .card-container > .card {
+    gap: 7rem;
+    align-self: center;
+  }
+}
