--- a/src/pages/components/card/CardImageBox.css
+++ b/src/pages/components/card/CardImageBox.css
@@ -1,23 +1,28 @@
 .card-image-box {
   border: 5px solid #DFEFFF;
   border-radius: 10px;
-  /* width: 500px; */
   display: flex;
+  align-self: center;
 }
 
 .card-image-box > img {
-  /* align-self: center;
-  position: relative;
-  top: 2rem;
-  left: 2rem; */
+  display: flex;
   width: 100%;
+  max-width: 400px;
   border-radius: 5px;
-  /* transition: 0.5s; */
 }
 
-/* 
-.card-image-box > img:hover {
-  top: 0;
-  left: 0;
+@media only screen and (min-width: 768px) {
+  .card-image-box > img {
+    align-self: center;
+    position: relative;
+    top: 2rem;
+    left: 2rem;
+    transition: 0.5s;
+  }
+  
+  .card-image-box > img:hover {
+    top: 0;
+    left: 0;
+  }
 }
-*/
