--- a/src/pages/components/Hero.css
+++ b/src/pages/components/Hero.css
@@ -31,6 +31,7 @@
   padding: 4rem 1rem;
   margin: 0 auto;
   gap: 4rem;
+  max-width: 1200px;
 }
 
 .hero > .text-box > small {
@@ -111,7 +112,6 @@
 
 @media only screen and (min-width: 1090px) {
   .hero {
-    padding: 4rem 5rem;
     width: fit-content;
     max-width: 1800px;
     margin: 0 auto;
@@ -139,5 +139,9 @@
   
   .hero > .hero-img:hover {
     border-color: #10162B;
+  }
+
+  .form-hero > .form-text-box {
+    padding: 5rem;
   }
 }
