--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -89,3 +89,15 @@
   display: flex;
   flex-direction: column;
 }
+
+@media only screen and (min-width: 768px) {
+  .form label[for="about-self"] {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 1090px) {
+  .form {
+    margin: 5rem auto;
+  }
+}
